--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.3.6",
   "displayName": "HandPosing",
   "description": "A tool for generating Hand-Poses using HandTracking",
-  "unity": "2019.4",
-  "unityRelease": "18f1",
+  "unity": "2020.3",
+  "unityRelease": "25f1",
   "documentationUrl": "https://mephestokhaan.github.io/HandPosing/Documentation/html/annotated.html",
   "keywords": [
     "unity",
@@ -46,5 +46,8 @@
       "description": "Create Animators for Cotrollers, compatible with Oculus Hands.",
       "path": "Samples~/AnimatorGeneration"
     }
-  ]
+  ],
+  "dependencies": {
+    "com.microsoft.mixedreality.toolkit.foundation": "2.7.2"
+  }
 }
